追加了变量操作符，追加了每个任务目标可操作的变量和开关

--- a/editor/quest-editor.html
+++ b/editor/quest-editor.html
@@ -143,8 +143,9 @@
 </template>
 
 <template id="quest-variable-row">
-    <div class="mini-row">
+    <div class="mini-row variable-row">
         <select class="variable-select theme-select"></select>
+        <div class="variable-op-container"></div>
         <input type="number" class="variable-value theme-input" value="0">
         <button class="icon-btn mini-row-remove" title="删除">×</button>
     </div>
